--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/9e15e3d08a.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <title>Sports Management System, TIET</title>
   </head>
